@@ -1,3 +1,7 @@
+2005-11-25  Michael Snyder  <msnyder@redhat.com>
+
+	* gdb.base/foll-fork.exp: Add PASS cases for linux.
+
 2005-11-11  Stephane Carrez  <stcarrez@nerim.fr>
 
 	* gdb.asm/m68hc11.inc: Setup the data section.
